[gd_scene load_steps=21 format=3 uid="uid://b5dhpre1xlntg"]

[ext_resource type="Script" uid="uid://d15lidov0wnbg" path="res://scenes/cameramovement.gd" id="1_sg6o2"]
[ext_resource type="Script" uid="uid://0kogyyh7vuw1" path="res://scenes/the_game_of_life.gd" id="2_ipdh0"]
[ext_resource type="Script" uid="uid://bsv8khopknnn1" path="res://scenes/camerazoom.gd" id="3_bfx6i"]
[ext_resource type="Script" uid="uid://dxua6oxqnduql" path="res://scenes/lifeistakingtolong.gd" id="4_3rgpa"]
[ext_resource type="Script" uid="uid://dnfuey2ss1fne" path="res://scenes/fps_label.gd" id="5_3rgpa"]
[ext_resource type="Script" uid="uid://cw2wsrj2685o2" path="res://scenes/exit_to_mm.gd" id="6_wfiq1"]
[ext_resource type="Texture2D" uid="uid://cn4musff4okqy" path="res://images/exit.png" id="7_8nfmy"]
[ext_resource type="Script" uid="uid://6em50vvtgc1e" path="res://scenes/sizing.gd" id="8_i1o2b"]
[ext_resource type="Texture2D" uid="uid://diy7f5t53a4mc" path="res://images/life/smaller.png" id="9_sg6o2"]
[ext_resource type="Script" uid="uid://cofs213dqg1vg" path="res://scenes/startsim.gd" id="10_8nfmy"]
[ext_resource type="Texture2D" uid="uid://djrlexybofpjx" path="res://images/life/larger.png" id="10_feepl"]
[ext_resource type="Texture2D" uid="uid://di45g1crgf8bn" path="res://images/life/start.png" id="12_1r6m1"]
[ext_resource type="Texture2D" uid="uid://dib28v4jr2gbs" path="res://images/life/restart.png" id="13_sg6o2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_feepl"]

[sub_resource type="Gradient" id="Gradient_bfx6i"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.4390491, 0.43904912, 0.43904912, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_n5sgt"]
gradient = SubResource("Gradient_bfx6i")
width = 500
height = 500

[sub_resource type="LabelSettings" id="LabelSettings_0bubp"]
font_size = 40

[sub_resource type="RectangleShape2D" id="RectangleShape2D_feepl"]
size = Vector2(58, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1r6m1"]
size = Vector2(195, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i1o2b"]
size = Vector2(196, 96)

[node name="Gameoflife" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(942, 536)
zoom = Vector2(0.66, 0.66)
script = ExtResource("1_sg6o2")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_feepl")
position = Vector2(953, 538.5)
scale = Vector2(30.78125, 17.828125)
texture = SubResource("GradientTexture2D_n5sgt")

[node name="theGame" type="Node2D" parent="."]
script = ExtResource("2_ipdh0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VSlider" type="VSlider" parent="CanvasLayer"]
offset_left = 1844.0
offset_top = 332.0
offset_right = 1875.0
offset_bottom = 713.0
min_value = 0.1
max_value = 1.5
step = 0.05
value = 1.1
script = ExtResource("3_bfx6i")

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
visible = false
offset_left = 945.0
offset_top = 12.0
offset_right = 949.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 50
script = ExtResource("4_3rgpa")

[node name="FPS Label" type="Label" parent="CanvasLayer"]
offset_left = 4.0
offset_top = 1018.0
offset_right = 83.0
offset_bottom = 1073.0
text = "FPS:"
label_settings = SubResource("LabelSettings_0bubp")
script = ExtResource("5_3rgpa")

[node name="exitToMM" type="Area2D" parent="CanvasLayer"]
position = Vector2(1873, 41)
script = ExtResource("6_wfiq1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/exitToMM"]
shape = SubResource("RectangleShape2D_feepl")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/exitToMM"]
texture = ExtResource("7_8nfmy")

[node name="Smaller" type="Area2D" parent="CanvasLayer"]
position = Vector2(1089, 995)
script = ExtResource("8_i1o2b")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Smaller"]
texture = ExtResource("9_sg6o2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Smaller"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_1r6m1")

[node name="Larger" type="Area2D" parent="CanvasLayer"]
position = Vector2(1351, 990)
script = ExtResource("8_i1o2b")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Larger"]
texture = ExtResource("10_feepl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Larger"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_1r6m1")

[node name="Start" type="Area2D" parent="CanvasLayer"]
visible = false
position = Vector2(110, 56)
script = ExtResource("10_8nfmy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Start"]
shape = SubResource("RectangleShape2D_i1o2b")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Start"]
texture = ExtResource("12_1r6m1")

[node name="Restart" type="Area2D" parent="CanvasLayer"]
visible = false
position = Vector2(110, 56)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Restart"]
shape = SubResource("RectangleShape2D_i1o2b")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Restart"]
texture = ExtResource("13_sg6o2")

[connection signal="value_changed" from="CanvasLayer/VSlider" to="CanvasLayer/VSlider" method="_on_value_changed"]
[connection signal="input_event" from="CanvasLayer/exitToMM" to="CanvasLayer/exitToMM" method="_on_input_event"]
[connection signal="input_event" from="CanvasLayer/Smaller" to="CanvasLayer/Smaller" method="_on_input_event"]
[connection signal="input_event" from="CanvasLayer/Larger" to="CanvasLayer/Smaller" method="_on_larger_input_event"]
[connection signal="input_event" from="CanvasLayer/Start" to="CanvasLayer/Start" method="_on_input_event"]
[connection signal="input_event" from="CanvasLayer/Restart" to="CanvasLayer/Start" method="_on_restart_input_event"]
